Blender crashes when dragging parting slider for child hair particles #48575

Closed
opened 2016-06-02 22:10:12 +02:00 by Burkhard Thess · 4 comments

System Information
Win 7 64 bit, GTX 970, CPU AMD FX 8350

Blender Version
Broken: 2.76b official, 2.77a official and latest from buildbot
Worked: (optional)

Short description of error
Blender crashes when dragging the parting slider for child hair particles. This happens also if you enter a number into hat field. I tested it also on a different machine with Win 10, 64 bit, CPU Intel i7 3610QM and a Nvida GT635m. Blender crashes with this file on that machine also.

Exact steps for others to reproduce the error
Open the attached blend file (I packed it as rar archive because of the particles) and drag the parting slider in the particle panel. Blender quits immediately.

bug_particles9.rar

**System Information** Win 7 64 bit, GTX 970, CPU AMD FX 8350 **Blender Version** Broken: 2.76b official, 2.77a official and latest from buildbot Worked: (optional) **Short description of error** Blender crashes when dragging the parting slider for child hair particles. This happens also if you enter a number into hat field. I tested it also on a different machine with Win 10, 64 bit, CPU Intel i7 3610QM and a Nvida GT635m. Blender crashes with this file on that machine also. **Exact steps for others to reproduce the error** Open the attached blend file (I packed it as rar archive because of the particles) and drag the parting slider in the particle panel. Blender quits immediately. [bug_particles9.rar](https://archive.blender.org/developer/F315776/bug_particles9.rar)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @minoribus

Added subscriber: @minoribus

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 528539ef59

This issue was referenced by 528539ef599402bf15721548fbce4ce7ea951f5d
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48575
No description provided.