Fix T48575: Particle crash using 'Parting' setting